2. Despliegue de API/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: api-ingress
  namespace: default
spec:
  rules:
    - host: api.storres.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port: 
                  number: 80
